--- a/SimpleSender.app/Contents/Info.plist
+++ b/SimpleSender.app/Contents/Info.plist
@@ -31,7 +31,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>SImpleSender</string>
+				<string>SimpleSender-Maofan</string>
 			</array>
 		</dict>
 	</array>
