--- a/SimpleSender.app/Contents/Info.plist
+++ b/SimpleSender.app/Contents/Info.plist
@@ -29,6 +29,8 @@
 		<dict>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.KC.SimpleSender</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>SimpleSender-Maofan</string>
