set application as agent; fix some bugs

--- a/Simpo.app/Contents/Info.plist
+++ b/Simpo.app/Contents/Info.plist
@@ -56,7 +56,7 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>10.12</string>
 	<key>LSUIElement</key>
-	<false/>
+	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
